fixed small errors

--- a/iscsi/files/ctl.conf
+++ b/iscsi/files/ctl.conf
@@ -7,7 +7,7 @@ pidfile {{ pidfile }}
 {%- endif %}
 
 {% for auth_group, details in 
-    salt['pillar.get']('iscsi-target:auth-groups', {}).items -%} 
+    salt['pillar.get']('iscsi-target:auth-groups', {}).items() -%} 
 auth-group {{ auth_group }} {
     {%- for user, secret in details['chaps'].items() %}
     chap {{ user }} {{ secret }}
@@ -16,7 +16,7 @@ auth-group {{ auth_group }} {
 {%- endfor %}
 
 {% for portal_group, details in
-    salt['pillar.get']('iscsi-target:portal-groups', {}).items -%} 
+    salt['pillar.get']('iscsi-target:portal-groups', {}).items() -%} 
 portal-group {{ portal_group }} {
     listen {{ details['listen'] }}
     discovery-auth-group {{ details['discovery-auth-group'] }}
@@ -24,7 +24,7 @@ portal-group {{ portal_group }} {
 {%- endfor %}
 
 {% for target, details in
-    salt['pillar.get']('iscsi-target:targets', {}).items -%} 
+    salt['pillar.get']('iscsi-target:targets', {}).items() -%} 
 target {{ target }} {
     auth-group {{ details['auth-group'] }}
     portal-group {{ details['portal-group'] }}
@@ -38,5 +38,6 @@ target {{ target }} {
             path {{ lun_conf }}
         {%- endif %}
     }
+    {%- endfor %}
 }
 {%- endfor %}
